    or "false" in [printer] section. (Wengier)
  - Added the "usesystemcursor" config option (in [sdl]
    section) which when set to true will use host system
    mouse cursor instead of drawing a DOS mouse cursor
    when the mouse is not locked. (Wengier)
  - When opening "Save..." or "Save Language File..."
    dialogs in the Configuration Tool, the new diaglogs
    will now automatically be in focus, and pressing ESC
    key will close these dialogs. (Wengier)
  - SETCOLOR command can now change the text-mode color
    schemes in outputs rather than the TrueType font
    output too (VGA mode only). (Wengier)
  - Added "ttf.wpfg" config option in [render] section
    which can optionally specify a foreground color
    (0-7) for the TTF output, similar to "ttf.wpbg" for
    the background color in the TTF output. (Wengier)
  - Added "ttf.printfont" config option in [render]
    section which when set to true (default) will force
    to use the current TrueType font (set via ttf.font)
    for printing too when using TTF output. (Wengier)
  - Improved handling of Ctrl+C/Ctrl+Break for shell-
    based DOS programs. (Wengier)
  - Added menu option "Print text screen" (under "DOS")
    to print current DOS text screen, if the printer
    feature has been enabled. (Wengier)
  - Added menu options "Display TTF blinking cursor",
    "CJK: Switch DBCS/SBCS mode", and "CJK: Auto-detect
    box-drawing symbols" under "Video" => "TTF options"
    menu group to toggle the TTF options ttf.blinkc,
    ttf.autodbcs and ttf.autoboxdraw found in [render]
    section of the config file. (Wengier)
  - Support for UTF-8 encoded language files. Specify
    a DOS code page with "country" option in [config]
    section of the config file. Windows SDL1 menu and
    macOS menu are now also compatible with Unicode
    language files and characters. Also improved code
    page compatibility for SDL-drawn menu. (Wengier)
  - Cleaned up the welcome banner messages and other