@@ -1,6 +1,5 @@
-:DOSBOX-X-VERSION
-0.83.14
-.
+:DOSBOX-X:VERSION:0.83.14
+:DOSBOX-X:CODEPAGE:858
 :AUTOEXEC_CONFIGFILE_HELP
 Las líneas en esta sección se iniciaran al inicio.◙Puedes poner tus líneas MOUNT aqui.◙
 .
