@@ -90,8 +90,8 @@ logfile     =
 debuggerrun = debugger
 
 [dosbox]
-#                  language: Select a language file for DOSBox-X to use. Encoded with either UTF-8 or DOS code page.
-#                              Set the code page with the "country" setting in [config] section, e.g. country=34,858
+#                  language: Select a language file for DOSBox-X to use. Encoded with either UTF-8 or a DOS code page.
+#                              You can set code page either in the language file or with "country" setting in [config] section.
 #                     title: Additional text to place in the title bar of the window.
 #              fastbioslogo: If set, DOSBox-X will skip the BIOS screen by activating fast BIOS logo mode (without 1-second pause).
 #               startbanner: If set (default), DOSBox-X will display the welcome banner when it starts.
